# CompartmentalModeling

./: .gitignore  FixedPoint.cpp  FixedPoint.h  IndexSet.hpp  LICENSE  Project.md  README.md  cse_string_test
Group-01/: .clang-format  .gitignore  Application.md  GraphFactory.hpp  Makefile  Project.md  TeamAgreement.md  main.cpp  main.html  main.js
Group-01/Distribution/: Distribution.hpp  README.md  main.cpp
Group-01/Feedback/: 2025-02-02-InitialSpec.md
Group-01/Graph/: AdvancedSpecs.md  Edge.cpp  Edge.h  Edge.hpp  Graph.cpp  Graph.hpp  GraphExceptions.hpp  GraphJson.hpp  README.md  Vertex.cpp  Vertex.h  Vertex.hpp  main.cpp
Group-01/GraphPosition/: AdvancedSpecs.md  GraphPosition.cpp  GraphPosition.hpp  README.md  main.cpp
Group-01/Random/: README.md  Random.cpp  Random.hpp
Group-01/Util/: Util.hpp
Group-01/WeightedSet/: README.md  WeightedSet.cpp  WeightedSet.hpp  main.cpp
Group-02/: .clang-format  .gitignore  AdvancedSpecs.md  CMakeLists.txt  Doxyfile  InitialSpecs.md  LICENSE  Project.md  TeamAgreement.md
Group-02/Feedback/: 2025-02-02-InitialSpec.md
Group-02/include/cse/: ActionMap.h  AdvancedDataMap.hpp  AuditedVector.h  AuditedVector.hpp  DataMap.h  DataMap.hpp  StateGrid.h  StateGrid.hpp  StateGridPosition.h  StateGridPosition.hpp
Group-02/specs/: InitialSpecs.md  ProjectSpecs.md
Group-02/src/app/: Application.cpp  Application.h  CMakeLists.txt  Compartment.cpp  Compartment.h  Connection.h  Main.qml  MainFrame.cpp  MainFrame.h  MainFrame.qml  Simulation.cpp  Simulation.h  SimulationUI.qml  main.cpp  pch.h  resources.qrc
Group-02/src/app/Application/: CMakeLists.txt  Simulation.cpp  Simulation.h  SimulationUI.qml
Group-02/src/app/Components/: CMakeLists.txt  Compartment.cpp  Compartment.h  Compartment.qml  CompartmentCanvasUI.qml  CompartmentEditUI.qml  CompartmentUI.qml  Connection.cpp  Connection.h  Connection.qml  ConnectionEditUI.qml  ConnectionUI.qml  GraphWindowUI.qml  ScrollCanvasUI.qml  Sidebar.cpp  Sidebar.h  Sidebar.qml  SidebarUI.qml  TimePlotUI.qml
Group-02/src/app/Resources/: CMakeLists.txt  resources.qrc
Group-02/src/app/Resources/examples/: SIR.sim
Group-02/src/app/Utilities/: CMakeLists.txt  Constants.qml  DarkTheme.qml  ErrorModule.qml  LightTheme.qml  MessageModule.qml  ThemeManager.qml
Group-02/src/app/resources/examples/: SIR.sim  SIR.xml
Group-02/src/cse/: ActionMap.cpp  AdvancedDataMap.cpp  AuditedVector.cpp  CMakeLists.txt  DataMap.cpp  StateGrid.cpp  StateGridPosition.cpp
Group-02/tests/: CMakeLists.txt  FailSafeTest.cpp  Makefile  TestCompartment.cpp  TestCompartment.h  TestConnection.cpp  TestConnection.h  TestSimulation.cpp  TestSimulation.h  gtest_main.cpp  main.cpp
Group-02/tests/AuditedVector/: AuditedVectorTestDebug.cpp  AuditedVectorTestRelease.cpp  Makefile
Group-02/tests/DataMap/: DataMapTest.cpp  Makefile
Group-02/tests/StateGrid/: StateGridTest.cpp
Group-02/tests/StateGridPosition/: Makefile  StateGridPositionTest.cpp
Group-03/: CMakeLists.txt  DataTracker.cpp  DataTracker.h  FixedPoint.cpp  FixedPoint.h  FunctionSet.cpp  FunctionSet.h  Project.md  Surface.cpp  Surface.h  main.cpp  pch.h
Group-03/DareLib/: CMakeLists.txt  Circle.cpp  FixedPoint.cpp  FunctionSet.cpp  Sector.cpp  Sector.h  Surface.cpp  Surface.h
Group-03/Feedback/: 2025-02-02-InitialSpec.md
Group-03/Tests/: CMakeLists.txt  Circle.cpp  DataTracker.cpp  DataTrackerAdvanced  DataTrackerAdvanced.cpp  EmptyTest.cpp  FixedPoint.cpp  FixedPointTest.cpp  FunctionSet.cpp  FunctionSetTest.cpp  Makefile  Surface.cpp  gtest_main.cpp
Group-03/Tests/CircleTests/: CircleTest.cpp  Makefile
Group-03/Tests/DataTrackerTests/: DataTrackerTest.cpp  Makefile
Group-03/Tests/FixedPointTests/: FixedPointTest.cpp  Makefile
Group-03/Tests/FunctionSetTest/: FunctionSetTest.cpp  Makefile
Group-03/Tests/SurfaceTests/: Makefile  SurfaceTest.cpp
Group-03/src/: Circle.cpp  Circle.h  DataTracker.cpp  DataTracker.h  FixedPoint.cpp  FixedPoint.h  FunctionSet.cpp  FunctionSet.h  Makefile  Sector.cpp  Sector.h  Surface.cpp  Surface.h  index.js  index.wasm  main.cpp
Group-04/: .gitignore  CMakeLists.txt  Makefile  Makefile.logic  Project.md  Write_Up.md
Group-04/Feedback/: 2025-02-02-InitialSpec.md
Group-04/app/: Bindings.hpp  EditorState.hpp  RichTextBindings.hpp  RichTextState.hpp  main.cpp
Group-04/lib/: BitVector.hpp  CseAssert.hpp  CseString.hpp  IndexSet.hpp  Makefile  Makefile.logic  RichText.hpp  RichTextBindings.hpp  RichTextState.hpp  SerializerCommon.hpp  SerializerHTML.hpp  SerializerLaTeX.hpp  SerializerMarkdown.hpp  SerializerRTF.hpp  cse_string.hpp  index_set.hpp  main.cpp
Group-04/linker-error-test/: Makefile  Makefile.logic
Group-04/meta/: Advanced Write Up - Group 4.docx  App Write Up - Group 4.docx  Project.md
Group-05/: CMakeLists.txt  FinalApplication.cpp  FinalApplication.h  Project.md  main  main.cpp
Group-05/Feedback/: 2025-02-02-InitialSpec.md
Group-05/src/: CSVfile.h  (+12 more)
Group-06/: ArgManager.cpp  Doxyfile  ErrorManager.cpp  Makefile  Project.md  commandLine.cpp  main.cpp
Group-07/: .gitignore  CMakeLists.txt  Project.md  inital_specs.md  main.cpp  team_agreement.md
Group-07/Data/: config.json  sample.csv
Group-07/Documents/: application_specs.md
Group-07/Feedback/: 2025-02-02-InitialSpec.md
Group-07/Team07Application/: Animals.hpp  Makefile  Simulation.hpp  main.cpp  sim
Group-07/Team07Library/: AuditedArray.h  AuditedArray.hpp  CMakeLists.txt  DataFileManager.cpp  DataFileManager.h  DataFileManager.hpp  OutputLog.cpp  OutputLog.h  OutputLog.hpp  Scheduler.cpp  Scheduler.h  Scheduler.hpp  Serializer.cpp  Serializer.h  Serializer.hpp
Group-07/Tests/: AuditedArrayTest.cpp  CMakeLists.txt  DataFileManagerTest.cpp  OutputLogTest.cpp  SchedulerTest.cpp  SerializerTest.cpp  gtest_main.cpp
Group-07/documents/: Specs for Advanced Classes.md  inital_specs.md
Group-08/: Project.md
Group-09/: Liskov-Initial Specs.md  Makefile  Project.md  index.html  main.cpp
Group-10/: Advanced Class Write-Up.md  Class Write-Up.md  Project.md  Team Agreement.md  TestStaticVector
tests/: .gitignore  Makefile
(+432 files in other folders)
